@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.51 2005/01/23 00:10:24 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.52 2005/01/25 22:53:12 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  24 Jan 2005; John Laliberte <allanonl@bu.edu>
+  Networking.py - fixed the bug where if no device was entered, it would
+  raise an exception.  also fixed the bug for if you had only a dhcp device.
+  Left justified the labels on the entry boxen.
 
   22 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Fixed bug where end sector was set 1 too high causing the last partition
